--- a/src/component_styles/style_header.scss
+++ b/src/component_styles/style_header.scss
@@ -27,6 +27,7 @@
         p {
           transform: skew(7.5deg);
           font-size: 0.7em;
+          line-height: 120%;
           padding-left: 0.25rem;
           padding-right: 1rem;
           margin-top:-1rem;
