--- a/src/App.scss
+++ b/src/App.scss
@@ -2,27 +2,55 @@
 $gillzBlue: #323B49;
 $gillzRed: #F9484C;
 $green: #56EB95;
+$gray: #FAFAFA;
+$shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+$shadowHover: 0px 0px 15px 0px rgba(179,179,179,1);
+$radius: 10px;
+
+//fonts
+@font-face {
+  font-family: 'Cairo';
+  src: local('Cairo'), url(./utils/fonts/Cairo-Regular.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'CairoLight';
+  src: local('CairoLight'), url(./utils/fonts/Cairo-Light.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'CairoSemiBold';
+  src: local('CairoSemiBold'), url(./utils/fonts/Cairo-SemiBold.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'CairoBold';
+  src: local('CairoBold'), url(./utils/fonts/Cairo-Bold.woff) format('woff');
+}
 
 .main {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   background-color: #FAFAFA;
+  //background-color: #121212;
 }
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
+  font-family: Cairo;
 }
 
 h2 {
   color: $gillzBlue;
-  font-family: Cairo;
+  font-family: CairoBold;
   font-weight: 800;
   font-size: 2em;
 }
 
 h3 {
   color: $gillzBlue;
-  font-family: Cairo;
+  font-family: CairoBold;
   font-weight: 700;
 }
 
@@ -42,4 +70,8 @@ h4 {
 
 .ok {
   color: $green !important;
+}
+
+input:focus {
+  outline: none;
 }
