--- a/src/component_styles/style_server-cards.scss
+++ b/src/component_styles/style_server-cards.scss
@@ -1,7 +1,22 @@
 @import "../App";
 
-.loading {
-  height: 30vh;
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loading-container {
+  height: 38.5vh;
+  display: flex;
+  justify-content: center;
+  .loading {
+    height: 10em;
+    width: 15em;
+  }
 }
 
 .card-container {
@@ -12,21 +27,26 @@
   grid-column-gap: 3rem;
   grid-row-gap: 2rem;
   margin-bottom: 2rem;
+  a {
+    display: grid;
+    text-decoration: none;
+  }
   &__card {
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
     transition: all 0.2s ease;
+    animation: opacity 1s ease;
     &:hover {
       box-shadow: 0px 0px 15px 0px rgba(179,179,179,1);
     }
     .card-layout {
       display: flex;
       flex-direction: row;
-      //padding: 5% 3.5% 5% 3.5%;
-      margin: 5% 3.5% 5% 3.5%;
+      padding: 5% 3.5% 5% 3.5%;
+      //margin: 5% 3.5% 5% 3.5%;
       justify-content: space-between;
-      height: 64%;
+      height: 70%;
       &__text {
         display: flex;
         flex-direction: column;
@@ -40,7 +60,9 @@
           display: flex;
           flex-direction: row;
           p {
-            font-size: 0.7em;
+            //font-size: 0.7em;
+            //font-size: 1em;
+            font-size: 80%;
             color: $gillzBlue;
             span {
               margin-right: 1rem;
@@ -69,7 +91,9 @@
           margin-right: auto;
         }
         p {
-          font-size: 0.7em;
+          //font-size: 0.7em;
+          //font-size: 1em;
+          font-size: 80%;
           color: $green;
           text-align: center;
         }
