--- a/src/component_styles/style_sidebar.scss
+++ b/src/component_styles/style_sidebar.scss
@@ -4,22 +4,45 @@
   top: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
   width: 4rem;
   background: white;
   padding-top: 1rem;
-  &__link {
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
-    padding: 0.5rem;
-    border-radius: 10px;
-    margin-bottom: 1rem;
-    &:hover {
-      box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
+  &__top {
+    display: flex;
+    flex-direction: column;
+    &--link {
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+      padding: 0.5rem;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      &:hover {
+        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
+      }
+      img {
+        width: 2em;
+      }
     }
-    img {
-      width: 2em;
+  }
+  &__bottom {
+    display: flex;
+    flex-direction: column;
+    &--link {
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+      padding: 0.5rem;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+      &:hover {
+        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
+      }
+      img {
+        width: 2em;
+      }
     }
   }
 }
