--- a/src/page_styles/style_overview.scss
+++ b/src/page_styles/style_overview.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     margin-top: 1rem;
    &--serverDeadlines {
-     margin-top: 3rem;
+     //margin-top: 3rem;
+     margin-top: 3vh;
    }
    &__bottom-row {
      display: grid;
