--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 //variables
 $gillzBlue: #323B49;
 $gillzRed: #F9484C;
+$gillzInverted: #40C7C1;
 $green: #56EB95;
 $gray: #FAFAFA;
 $shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
@@ -73,5 +74,9 @@ h4 {
 }
 
 input:focus {
+  outline: none;
+}
+
+select:focus {
   outline: none;
 }
