--- a/src/component_styles/style_sidebar.scss
+++ b/src/component_styles/style_sidebar.scss
@@ -1,3 +1,5 @@
+@import "../app.scss";
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -19,8 +21,11 @@
       padding: 0.5rem;
       border-radius: 10px;
       margin-bottom: 1rem;
+      transition: all 0.2s ease;
       &:hover {
         box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
+        background-color: $gillzInverted;
+        filter: invert(100%);
       }
       img {
         width: 2em;
@@ -37,12 +42,20 @@
       padding: 0.5rem;
       border-radius: 10px;
       margin-bottom: 2rem;
+      transition: all 0.2s ease;
       &:hover {
         box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
+        background-color: $gillzInverted;
+        filter: invert(100%);
       }
       img {
         width: 2em;
       }
     }
   }
+}
+
+.nav-active {
+  background-color: $gillzInverted;
+  filter: invert(100%);
 }
