--- a/src/page_styles/style_overview.scss
+++ b/src/page_styles/style_overview.scss
@@ -6,6 +6,13 @@
      //margin-top: 3rem;
      margin-top: 3vh;
    }
+   &__deadlines {
+     max-height: 37vh;
+     overflow: scroll;
+     padding: 1rem;
+     margin-left: -1rem;
+     margin-top: -1rem;
+   }
    &__bottom-row {
      display: grid;
      grid-template-columns: 50% auto;
