--- a/src/component_styles/style_dialog_deadlines.scss
+++ b/src/component_styles/style_dialog_deadlines.scss
@@ -14,7 +14,7 @@
   right: 0;
   margin: auto;
   //box-shadow: 0px 0px 1500px 1000px rgba(179,179,179,0.5);
-  box-shadow: 0px 0px 1500px 1000px rgba(0,0,0,0.5);
+  //box-shadow: 0px 0px 1500px 1000px rgba(0,0,0,0.5);
   &__top {
     display: flex;
     flex-direction: row;
@@ -166,19 +166,35 @@
 
 @keyframes fade {
   from {
-    transform: translateY(-20%);
+    transform: translateY(-50%);
     opacity: 0;
   }
   to {
-    transform: translateY(-1%);
+    transform: translateY(-15%);
     opacity: 1;
   }
 }
 
-.visible {
+.visibleAnim {
   display: flex;
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
-  animation: fade 0.2s ease;
+  animation: fade 0.2s ease forwards;
+  z-index: 1;
+}
+
+.visible {
+  opacity: 1 !important;
+}
+
+.modal-background {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(53, 53, 53, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
