--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ $gillzInverted: #40C7C1;
 $green: #56EB95;
 $gray: #FAFAFA;
 $shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+$shadowSmall: 0px 0px 5px 0px rgba(179,179,179,0.5);
 $shadowHover: 0px 0px 15px 0px rgba(179,179,179,1);
 $radius: 10px;
 
