--- a/src/component_styles/style_comp_deadlines.scss
+++ b/src/component_styles/style_comp_deadlines.scss
@@ -2,7 +2,7 @@
 
 .deadlines-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 90%);
+  grid-template-columns: repeat(auto-fit, 100%);
   grid-column-gap: 3rem;
   grid-row-gap: 2.5vh;
   a {
@@ -11,13 +11,41 @@
       color: $gillzBlue;
     }
   }
+  &__sort {
+    display: flex;
+    flex-direction: row;
+    margin-top: -1.5%;
+    width: 50%;
+    h3 {
+      margin-right: 1rem;
+      padding-right: 1rem;
+      border-right: 2px solid lightgray;
+    }
+    &--button {
+      appearance: none;
+      background-color: transparent;
+      border-radius: $radius;
+      //box-shadow: $shadow;
+      border: none;
+      padding: 0 1rem 0 1rem;
+      margin-right: 1rem;
+      font-family: CairoSemiBold;
+      outline: none;
+      cursor: pointer;
+      border: 2px solid lightgray;
+      &:hover {
+        //box-shadow: $shadowHover;
+      }
+    }
+  }
   .deadline {
     display: flex;
     flex-direction: row;
-    background: white;
+    //background: white;
     border-radius: 10px;
-    padding: 0.5em;
-    box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+    //padding: 0.5em;
+    //box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+    box-shadow: $shadowSmall;
     justify-content: space-between;
     transition: all 0.5s ease;
     min-width: 30% !important;
@@ -32,10 +60,17 @@
     &-leftside {
       display: flex;
       flex-direction: row;
-      h3 {
-        padding-right: 1rem;
-        margin-right: 1rem;
-        border-right: 2px solid #D8D8D8;
+      padding: 0.25rem;
+      //z-index: 1;
+      &__title {
+        color: white;
+        //mix-blend-mode: difference;
+        h3 {
+          padding-right: 1rem;
+          margin-right: 1rem;
+          border-right: 2px solid #D8D8D8;
+          color: white;
+        }
       }
     &__member-container {
       display: flex;
@@ -56,13 +91,18 @@
     &-rightside {
       display: flex;
       flex-direction: row;
+      color: white;
+      mix-blend-mode: difference;
       &__add-image {
         margin-left: 1rem;
         cursor: pointer;
         transition: all 0.2s ease;
         border-radius: 100%;
+        color: white;
+        mix-blend-mode: difference;
         img {
-          padding-top: 0.5rem;
+          padding-top: 0.75rem;
+          padding-right: 0.5rem;
           height: 1em;
           opacity: 0;
           width: 0;
@@ -74,169 +114,18 @@
         align-items: center;
       }
     }
-  }
-}
-
-@keyframes zero {
-  0% {
-    background: white;
-    width: 100%;
-  }
-  100% {
-    background: $gillzRed;
-    width: 30%;
-    color: white;
-  }
-}
-
-@keyframes ten {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 35%;
-  }
-}
-
-@keyframes twenty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 40%;
-  }
-}
-
-@keyframes thirty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 45%;
-  }
-}
-
-@keyframes fourty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 50%;
-  }
-}
-
-@keyframes fifty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 55%;
-  }
-}
-
-@keyframes sixty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 60%;
-  }
-}
-
-@keyframes seventy {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 65%;
-  }
-}
-
-@keyframes eighty {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 70%;
-  }
-}
-
-@keyframes ninety {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 75%;
-  }
-}
-
-@keyframes hundred {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 80%;
+    &__background {
+      background-color: red;
+      width: 1em;
+      border-radius: $radius;
+      //position: relative;
+      z-index: 1;
+    }
   }
 }
 
 .transition {
   transition: all 0.5s ease;
-}
-
-.hundreddays {
-  //width: 100%;
-  //transition: all 0.5s ease;
-  animation: hundred 2s ease forwards;
-}
-.ninetydays {
-  //width: 95%;
-  //transition: all 0.5s ease;
-  animation: ninety 2s ease forwards;
-}
-.eightydays {
-  //width: 90%;
-  //transition: all 0.5s ease;
-  animation: eighty 2s ease forwards;
-}
-.seventydays {
-  //width: 85%;
-  //transition: all 0.5s ease;
-  animation: seventy 2s ease forwards;
-}
-.sixtydays {
-  //width: 80%;
-  //transition: all 0.5s ease;
-  animation: sixty 2s ease forwards;
-}
-.fiftydays {
-  //width: 75%;
-  //transition: all 0.5s ease;
-  animation: fifty 2s ease forwards;
-}
-.fourtydays {
-  //width: 70%;
-  //transition: all 0.5s ease;
-  animation: fourty 2s ease forwards;
-}
-.thirtydays {
-  //width: 65%;
-  //transition: all 0.5s ease;
-  animation: thirty 2s ease forwards;
-}
-.twentydays {
-  //width: 60%;
-  //transition: all 0.5s ease;
-  animation: twenty 2s ease forwards;
-}
-.tendays {
-  //width: 55%;
-  //transition: all 0.5s ease;
-  animation: ten 2s ease forwards;
-}
-.zerodays {
-  //width: 30%;
-  //transition: all 0.5s ease;
-  animation: zero 2s ease forwards;
 }
 
 .deadline--alert {
@@ -245,4 +134,13 @@
 
 .hidden {
   display: none !important;
+}
+
+.activeSort {
+  border: 2px solid $gillzRed;
+  color: $gillzRed;
+}
+
+.unavailableMember {
+  opacity: 0.5;
 }
