--- a/src/component_styles/style_sidebar.scss
+++ b/src/component_styles/style_sidebar.scss
@@ -11,45 +11,138 @@
   width: 4rem;
   background: white;
   padding-top: 1rem;
+  z-index: 1;
+  &:hover {
+    transition: all 0.2s ease-in-out;
+    width: 10rem;
+    box-shadow: 0px 0px 50px 0px rgba(179,179,179,0.5);
+  }
+  &:hover label {
+    //opacity: 1;
+    animation: opacity 1s ease forwards;
+  }
   &__top {
     display: flex;
     flex-direction: column;
-    &--link {
-      margin-left: auto;
-      margin-right: auto;
-      box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
-      padding: 0.5rem;
-      border-radius: 10px;
+    &__item-container {
+      display: flex;
+      flex-direction: row;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      border-radius: $radius;
       margin-bottom: 1rem;
+      cursor: pointer;
       transition: all 0.2s ease;
       &:hover {
-        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
         background-color: $gillzInverted;
+        box-shadow: $shadow;
         filter: invert(100%);
       }
-      img {
-        width: 2em;
+      &:hover .nav-active {
+        background-color: $gillzInverted;
+        filter: invert(0%);
+      }
+      &:hover &--link {
+        box-shadow: none;
+      }
+      label {
+        font-family: CairoLight;
+        min-width: 5rem;
+        height: 2rem;
+        opacity: 0;
+        margin: auto 1rem auto 1rem;
+        cursor: pointer;
+      }
+      &--link {
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+        padding: 0.5rem;
+        border-radius: 10px;
+        //margin-bottom: 1rem;
+        transition: all 0.2s ease;
+        cursor: pointer;
+        height: 2rem;
+        width: 2rem;
+        &:hover {
+          box-shadow: none;
+        }
+        img {
+          width: 2em;
+          cursor: pointer;
+        }
+        button {
+          appearance: none;
+          border: none;
+          background-color: transparent;
+          outline: none;
+          margin-left: auto;
+          margin-right: auto;
+          height: 2rem;
+          width: 2rem;
+          background-size: 2em;
+          background-repeat: no-repeat;
+          background-position: center center;
+          cursor: pointer;
+        }
       }
     }
   }
   &__bottom {
     display: flex;
     flex-direction: column;
-    &--link {
-      margin-left: auto;
-      margin-right: auto;
-      box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
-      padding: 0.5rem;
-      border-radius: 10px;
-      margin-bottom: 2rem;
+    &__item-container {
+      display: flex;
+      flex-direction: row;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      border-radius: $radius;
+      margin-bottom: 3rem;
+      cursor: pointer;
       transition: all 0.2s ease;
+      height: 3rem;
       &:hover {
-        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.75);
         background-color: $gillzInverted;
+        box-shadow: $shadow;
         filter: invert(100%);
       }
-      img {
-        width: 2em;
+      &:hover &--link {
+        box-shadow: none;
+      }
+      label {
+        font-family: CairoLight;
+        min-width: 5rem;
+        height: 2rem;
+        opacity: 0;
+        margin: auto 1rem auto 1rem;
+        cursor: pointer;
+      }
+      &--link {
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+        padding: 0.5rem;
+        border-radius: 10px;
+        margin-bottom: 2rem;
+        transition: all 0.2s ease;
+        height: 2rem;
+        img {
+          width: 2em;
+        }
+        button {
+          appearance: none;
+          border: none;
+          background-color: transparent;
+          outline: none;
+          margin-left: auto;
+          margin-right: auto;
+          height: 2rem;
+          width: 2rem;
+          background-size: 2em;
+          background-repeat: no-repeat;
+          background-position: center center;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -58,4 +151,20 @@
 .nav-active {
   background-color: $gillzInverted;
   filter: invert(100%);
+}
+
+.nav-active-text {
+  color: red;
+  text-decoration: none;
+}
+
+@keyframes opacity {
+  0% {
+    transform: translateY(-10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(10%);
+    opacity: 1;
+  }
 }
