--- a/src/page_styles/style_deadlines.scss
+++ b/src/page_styles/style_deadlines.scss
@@ -18,6 +18,7 @@
         border-radius: 10px;
         cursor: pointer;
         transition: all 0.2s ease;
+        margin-bottom: -20%;
         &:hover {
           background: white;
           box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
