--- a/src/page_styles/style_overview.scss
+++ b/src/page_styles/style_overview.scss
@@ -8,7 +8,7 @@
    }
    &__deadlines {
      max-height: 37vh;
-     overflow: scroll;
+     //overflow: scroll;
      padding: 1rem;
      margin-left: -1rem;
      margin-top: -1rem;
