--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
 //variables
 $gillzBlue: #323B49;
 $gillzRed: #F9484C;
-$gillzInverted: #40C7C1;
+$gillzRedLight: #fb6e6d;
+$gillzRedLighter: #fd948f;
+$gillzRedLightest: #feb9b0;
+$gillzInverted: #06b7b3;
 $green: #56EB95;
 $gray: #FAFAFA;
 $shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
