--- a/src/page_styles/style_overview.scss
+++ b/src/page_styles/style_overview.scss
@@ -1,16 +1,23 @@
  .server-container {
     display: flex;
     flex-direction: column;
+   justify-content: space-between;
     margin-top: 1rem;
    &--serverDeadlines {
      //margin-top: 3rem;
      margin-top: 3vh;
+   }
+   &__bottom {
+     //height: 17rem;
+     overflow: hidden;
+     height: 45.5vh;
    }
    &__deadlines {
      max-height: 37vh;
      //overflow: scroll;
      padding: 1rem;
      margin-left: -1rem;
+     margin-right: 5rem;
      margin-top: -1rem;
    }
    &__bottom-row {
