--- a/src/component_styles/style_comp_deadlines.scss
+++ b/src/component_styles/style_comp_deadlines.scss
@@ -50,7 +50,7 @@
     transition: all 0.5s ease;
     min-width: 30% !important;
     &:hover {
-      box-shadow: 0px 0px 15px 0px rgba(179,179,179,1);
+      box-shadow: $shadowHoverSmall;
     }
 
     &:hover .deadline-rightside__add-image img {
