--- a/src/component_styles/style_server-cards.scss
+++ b/src/component_styles/style_server-cards.scss
@@ -14,8 +14,10 @@
   display: flex;
   justify-content: center;
   .loading {
-    height: 10em;
-    width: 15em;
+    //height: 10em;
+    //width: 15em;
+    height: 4rem;
+    width: 4rem;
   }
 }
 
@@ -34,11 +36,11 @@
   &__card {
     background: white;
     border-radius: 10px;
-    box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
+    box-shadow: $shadow;
     transition: all 0.2s ease;
     animation: opacity 1s ease;
     &:hover {
-      box-shadow: 0px 0px 15px 0px rgba(179,179,179,1);
+      box-shadow: $shadowHover;
     }
     .card-layout {
       display: flex;
