--- a/src/component_styles/style_sidebar.scss
+++ b/src/component_styles/style_sidebar.scss
@@ -15,6 +15,7 @@
   &:hover {
     transition: all 0.2s ease;
     width: 10rem;
+    //background-color: $gillzRed;
     box-shadow: 0px 0px 50px 0px rgba(179,179,179,0.5);
   }
   &:hover label {
