--- a/src/component_styles/style_comp_builds.scss
+++ b/src/component_styles/style_comp_builds.scss
@@ -3,10 +3,11 @@
 .builds-container {
   margin-left: -0.5rem;
   overflow: hidden;
+  min-height: 40vh;
   &__table {
     //border-collapse: separate;
     border-spacing: 0.5em 1em;
-    width: 97%;
+    width: 100%;
     border-radius: $radius;
     &__body {
       &__head {
