--- a/src/component_styles/style_comp_deadlines.scss
+++ b/src/component_styles/style_comp_deadlines.scss
@@ -5,6 +5,9 @@
   grid-template-columns: repeat(auto-fit, 100%);
   grid-column-gap: 3rem;
   grid-row-gap: 2.5vh;
+  margin-top: -0.5rem;
+  width: 100%;
+  min-height: 30vh;
   a {
     text-decoration: none;
     p {
@@ -16,6 +19,7 @@
     flex-direction: row;
     margin-top: -1.5%;
     width: 50%;
+    max-height: 2rem;
     h3 {
       margin-right: 1rem;
       padding-right: 1rem;
@@ -48,7 +52,6 @@
     box-shadow: $shadowSmall;
     justify-content: space-between;
     transition: all 0.5s ease;
-    min-width: 30% !important;
     &:hover {
       box-shadow: $shadowHoverSmall;
     }
@@ -60,16 +63,34 @@
     &-leftside {
       display: flex;
       flex-direction: row;
-      padding: 0.25rem;
-      //z-index: 1;
-      &__title {
+      padding: 0.25rem 0 0.25rem 0.5rem;
+      h3 {
         color: white;
-        //mix-blend-mode: difference;
+        font-family: CairoLight;
+      }
+      //z-index: 1;
+      &__project {
+        color: white;
         h3 {
           padding-right: 1rem;
           margin-right: 1rem;
-          border-right: 2px solid #D8D8D8;
+          border-right: 2px solid #d8d8d8;
+          //border-right: 2px solid gray;
           color: white;
+          font-family: CairoBold;
+        }
+      }
+      &__title {
+        //color: white;
+        margin-right: 1rem;
+        border-right: 2px solid #d8d8d8;
+        //border-right: 2px solid gray;
+        p {
+          padding-right: 1rem;
+          color: white;
+          font-family: CairoLight;
+          height: 100%;
+          padding-top: 0.15rem;
         }
       }
     &__member-container {
@@ -91,8 +112,10 @@
     &-rightside {
       display: flex;
       flex-direction: row;
-      color: white;
-      mix-blend-mode: difference;
+      //color: white;
+      //color: lightgrey;
+      color: $gillzBlue;
+      //mix-blend-mode: difference;
       &__add-image {
         margin-left: 1rem;
         cursor: pointer;
@@ -134,11 +157,6 @@
 
 .hidden {
   display: none !important;
-}
-
-.activeSort {
-  border: 2px solid $gillzRed;
-  color: $gillzRed;
 }
 
 .unavailableMember {
