--- a/src/component_styles/style_comp_members.scss
+++ b/src/component_styles/style_comp_members.scss
@@ -2,9 +2,11 @@
 
 .members-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 20%);
-  grid-column-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 250px));
+  //grid-column-gap: 3rem;
   grid-row-gap: 3rem;
+  justify-content: space-between;
+  margin-bottom: 3rem;
   .member {
     background: white;
     border-radius: 10px;
@@ -15,10 +17,23 @@
       height: 50%;
       max-height: 12rem;
       object-fit: cover;
-      border-radius: 10px;
+      border-top-left-radius: $radius;
+      border-top-right-radius: $radius;
     }
     &__name {
       padding-left: 0.5rem;
+      padding-right: 0.5rem;
+    }
+    &__jobTitle {
+      padding-left: 0.5rem;
+      color: lightgrey;
+      font-size: 0.8rem;
+    }
+    &__description {
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
     }
     &__present {
       padding-left: 0.5rem;
