--- a/src/component_styles/style_comp_notes.scss
+++ b/src/component_styles/style_comp_notes.scss
@@ -2,26 +2,51 @@
 
 .notes-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 15%);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 280px));
   grid-column-gap: 3rem;
+  justify-content: space-between;
   grid-row-gap: 2.5vh;
+  margin-bottom: 1rem;
   .note {
-    background-color: white;
+    background-color: #feff9c;
     box-shadow: $shadow;
     border-radius: $radius;
     padding: 0.5rem;
+    transition: all 0.2s ease;
+    min-height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    &:hover img {
+      transform: translateX(0%);
+      opacity: 1;
+    }
+    &__top {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      img {
+        transform: translateX(10%);
+        opacity: 0;
+        width: 1.25rem;
+        height: 1.25rem;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+    }
     &__title {
       margin-bottom: 1rem;
+      border-bottom: 2px solid $gillzBlue;
     }
     &__description {
       font-weight: 300;
-      margin-bottom: 2rem;
-      height: 10vh;
+      //margin-bottom: 2rem;
+      //height: 10vh;
     }
     &__date {
       text-align: right;
       font-size: 0.8em;
-      color: lightgrey;
+      color: $gillzBlue;
     }
   }
 }
