--- a/src/component_styles/style_comp_projects.scss
+++ b/src/component_styles/style_comp_projects.scss
@@ -2,15 +2,20 @@
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 30%);
-  grid-column-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, 100%);
+  grid-column-gap: 3.1vw;
   grid-row-gap: 2.5vh;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  animation: fade 1s ease;
   .project {
     box-shadow: $shadow;
     border-radius: $radius;
     transition: all 0.2s ease;
+    background-color: white;
     &:hover {
-      box-shadow: $shadowHover;
+      //box-shadow: $shadowHover;
+      background-color: transparent;
     }
     &__link {
       color: $gillzBlue;
@@ -19,19 +24,44 @@
           display: flex;
           flex-direction: row;
           overflow: hidden;
-          height: 10rem;
+          width: 100%;
+          //height: 5rem;
           &--image img {
-            width: 10rem;
+            width: 5rem;
             object-fit: cover;
-            height: 10rem;
+            min-height: 5rem;
             border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;
           }
-          &--text {
-            padding: 1rem;
-
+          &__text {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+            &--left {
+              padding-left: 1rem;
+              //white-space: nowrap;
+              overflow: hidden;
+              text-overflow: fade(10%);
+              width: 80%;
+            }
+            &--right {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              width: 15%;
+            }
           }
         }
       }
     }
   }
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
