--- a/src/page_styles/style_deadlines.scss
+++ b/src/page_styles/style_deadlines.scss
@@ -4,10 +4,11 @@
   margin-top: 2rem;
   max-width: 90vw;
   .deadlines-container {
+    margin-bottom: 1rem;
     &__row {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: flex-end;
       margin-bottom: 1rem;
       &--add {
         width: 1em;
@@ -19,6 +20,7 @@
         cursor: pointer;
         transition: all 0.2s ease;
         margin-bottom: -20%;
+        z-index: 1;
         &:hover {
           background: white;
           box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.5);
