--- a/src/page_styles/style_notes.scss
+++ b/src/page_styles/style_notes.scss
@@ -7,7 +7,7 @@
     &__row {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: flex-end;
       margin-bottom: 1rem;
       &--add {
         width: 1em;
