removed .env and added maintainence mode switch

--- a/src/component_styles/style_comp_members.scss
+++ b/src/component_styles/style_comp_members.scss
@@ -26,7 +26,8 @@
     }
     &__jobTitle {
       padding-left: 0.5rem;
-      color: lightgrey;
+      //color: lightgrey;
+      opacity: 0.5;
       font-size: 0.8rem;
     }
     &__description {
