--- a/src/component_styles/style_server-cards.scss
+++ b/src/component_styles/style_server-cards.scss
@@ -37,7 +37,7 @@
   //grid-template-columns: 30% 30% 30%;
   grid-template-columns: repeat(auto-fit, 17%);
   grid-template-rows: 50% 50%;
-  //grid-column-gap: 3.4vw;
+  grid-column-gap: 2rem;
   justify-content: space-between;
   grid-row-gap: 2rem;
   margin-bottom: 2rem;
@@ -130,8 +130,35 @@
   &__top {
     display: flex;
     justify-content: space-between;
-    h2un start {
-      margin-top: -1rem;
+    flex-direction: row;
+    &__left {
+      //width: 30em;
+      display: flex;
+      flex-direction: row;
+      h2 {
+        margin-top: -0.75rem;
+        padding-right: 1rem;
+      }
+      form {
+        padding-left: 1rem;
+        border-left: 2px solid #EAEAEA;
+        width: 10em;
+        select {
+          border: none;
+          box-shadow: 0px 0px 15px 0px rgba(179,179,179,0.25);
+          appearance: none;
+          background-color: white;
+          border-radius: 10px;
+          width: 100%;
+          padding: 0.25em 0.5em 0.25em 0.5em;
+          font-family: CairoLight;
+          font-size: 1em;
+          background-image: url("../img/arrow-down.svg");
+          background-size: 0.75em;
+          background-repeat: no-repeat;
+          background-position: 95% 50%;
+        }
+      }
     }
     .cancel {
       width: 1rem;
@@ -232,4 +259,11 @@
 
 .alertYellow {
   animation: AlertYellow 4s ease infinite;
+}
+
+.maintenance {
+  background-color: transparent;
+  //p {
+  //  color: $gillzBlue !important;
+  //}
 }
